--- a/Misc/NEWS.d/next/C API/2024-04-17-16-48-17.gh-issue-117987.zsvNL1.rst
+++ b/Misc/NEWS.d/next/C API/2024-04-17-16-48-17.gh-issue-117987.zsvNL1.rst
@@ -1,4 +1,4 @@
-Restore functions reomved in Python 3.13 alpha 1:
+Restore functions removed in Python 3.13 alpha 1:
 
 * :c:func:`Py_SetPythonHome`
 * :c:func:`Py_SetProgramName`
