--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-18-03-49-41.gh-issue-117958.-EsfUs.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-18-03-49-41.gh-issue-117958.-EsfUs.rst
@@ -1,2 +1,2 @@
 Added a method to access JIT compiled machine code from the UOp Executor when the experimental JIT is enabled. Patch
-by Anthony Shaw
+by Anthony Shaw.
