--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-19-11-59-57.gh-issue-118082._FLuOT.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-19-11-59-57.gh-issue-118082._FLuOT.rst
@@ -1,2 +1,3 @@
-Improve :exc:`SyntaxError` message for ``from x import`` case. It now points
+Improve :exc:`SyntaxError` message for imports without names, like in
+``from x import`` and ``import`` cases. It now points
 out to user that :keyword:`import` expects at least one name after it.
