Feedback from Alex

--- a/Misc/NEWS.d/next/Core and Builtins/2024-02-29-18-55-45.gh-issue-116129.wsFnIq.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-02-29-18-55-45.gh-issue-116129.wsFnIq.rst
@@ -1,2 +1,2 @@
-Add grammar support for defaults on type parameters, as specified in
-:pep:`696`. Patch by Jelle Zijlstra.
+Implement :pep:`696`, adding support for defaults on type parameters.
+Patch by Jelle Zijlstra.
