--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -527,6 +527,7 @@ inspect
 * Add *bound_arg* parameter to :func:`inspect.Signature.from_callable`
   and :func:`inspect.signature`: keep the ``self`` parameter
   in the method signature if *bound_arg* is True.
+  :pypi:`inspect313` package has a backport of this feature.
   (Contributed by Nikita Sobolev in :gh:`108901`.)
 
 ipaddress
