--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-25-11-48-28.gh-issue-118216.SVg700.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-25-11-48-28.gh-issue-118216.SVg700.rst
@@ -1,1 +1,1 @@
-Don't consider `__future__` imports with dots before the module name.
+Don't consider :mod:`__future__` imports with dots before the module name.
