handle mmap_write_byte_method

--- a/Misc/NEWS.d/next/Windows/2024-04-24-05-16-32.gh-issue-118209.Ryyzlz.rst
+++ b/Misc/NEWS.d/next/Windows/2024-04-24-05-16-32.gh-issue-118209.Ryyzlz.rst
@@ -1,1 +1,2 @@
-Fix crashes in :func:`mmap.read`, :func:`mmap.read_byte` and :func:`mmap.write` on Windows when the underlying file operation raises errors.
+Fix crashes in :func:`mmap.read`, :func:`mmap.read_byte`, :func:`mmap.write`
+and :func:`mmap.write_byte` on Windows when the underlying file operation raises errors.
