--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -277,7 +277,7 @@ Other Language Changes
 
 * :ref:`annotation scope <annotation-scopes>` within class scopes can now
   contain lambdas and comprehensions. Comprehensions that are located within
-  class scopes are not inliked into their parent scope. (Contributed by
+  class scopes are not inlined into their parent scope. (Contributed by
   Jelle Zijlstra in :gh:`109118` and :gh:`118160`.)
 
 
