--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-27-14-39-02.gh-issue-118345.-TITAI.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-27-14-39-02.gh-issue-118345.-TITAI.rst
@@ -1,1 +1,1 @@
-Fix func:`ntpath.abspath` & func:`posixpath.abspath` for relative paths on the other platform`.
+Fix :func:`ntpath.abspath` & :func:`posixpath.abspath` for relative paths on the other platform`.
