--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-27-21-44-40.gh-issue-74929.C2nESp.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-27-21-44-40.gh-issue-74929.C2nESp.rst
@@ -1,1 +1,1 @@
-Implement PEP 667 - converted ``frame.f_locals`` to a real-time proxy
+Implement PEP 667 - converted ``frame.f_locals`` to a write through proxy
