--- a/Misc/NEWS.d/next/C API/2022-10-01-09-56-27.gh-issue-97588.Gvg54o.rst
+++ b/Misc/NEWS.d/next/C API/2022-10-01-09-56-27.gh-issue-97588.Gvg54o.rst
@@ -1,1 +1,2 @@
-Fix ctypes construction of structs from description.
+Fix creating bitfields in :mod:`ctypes` structures and unions. Fields
+no longer overlap.
