--- a/Misc/NEWS.d/next/Core and Builtins/2023-06-18-00-27-57.gh-issue-105879.dPw78k.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2023-06-18-00-27-57.gh-issue-105879.dPw78k.rst
@@ -1,1 +1,2 @@
-Allow keyword arguments to be used when calling :meth:`~eval` and :meth:`~exec`.
+Allow the *globals* and *locals* arguments to :func:`exec`
+and :func:`eval` to be passed as keywords.
