--- a/Misc/NEWS.d/next/Core and Builtins/2024-05-01-22-43-54.gh-issue-118473.QIvq9R.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-05-01-22-43-54.gh-issue-118473.QIvq9R.rst
@@ -1,1 +1,1 @@
-Fix set_asyncgen_hooks not to be partially set when raising TypeError
+Fix :func:`sys.set_asyncgen_hooks` not to be partially set when raising :exc:`TypeError`.
