--- a/Misc/NEWS.d/next/Core and Builtins/2024-05-03-18-01-26.gh-issue-95382.73FSEv.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-05-03-18-01-26.gh-issue-95382.73FSEv.rst
@@ -1,1 +1,1 @@
-Improve performance of :func:`json.dumps` and :func:`json.dump` when using the argument `indent`.
+Improve performance of :func:`json.dumps` and :func:`json.dump` when using the argument *indent*.
