--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -745,7 +745,7 @@ statistics
 
 * Add :func:`statistics.kde` for kernel density estimation.
   This makes it possible to estimate a continuous probability density function
-  from a fixed number of discrete samples.  Also added :func:`kde_random`
+  from a fixed number of discrete samples.  Also added :func:`statistics.kde_random`
   for sampling the estimated probability density function.
   (Contributed by Raymond Hettinger in :gh:`115863`.)
 
