--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -132,6 +132,12 @@ Other Language Changes
   equivalent of the :option:`-X frozen_modules <-X>` command-line option.
   (Contributed by Yilei Yang in :gh:`111374`.)
 
+* Add :ref:`support for the perf profiler <perf_profiling>` working without
+  frame pointers through the new environment variable
+  :envvar:`PYTHONPERFJITSUPPORT` and command-line option :option:`-X perfjit
+  <-X>` (Contributed by Pablo Galindo in :gh:`118518`.)
+
+
 New Modules
 ===========
 
