closes gh-138706: update Unicode to 17.0.0 (#138719)

--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -713,6 +713,12 @@ unicodedata
 * The Unicode database has been updated to Unicode 17.0.0.
 
 
+unicodedata
+-----------
+
+* The Unicode database has been updated to Unicode 17.0.0.
+
+
 wave
 ----
 
