"Patch", not "Path"

--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-09-17-17-17-21.gh-issue-138558.0VbzCH.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-09-17-17-17-21.gh-issue-138558.0VbzCH.rst
@@ -1,1 +1,1 @@
-Fix handling of unusual t-string annotations in annotationlib. Path by Dave Peck.
+Fix handling of unusual t-string annotations in annotationlib. Patch by Dave Peck.
