--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-09-18-01-13-22.gh-issue-138890.x2QKfy.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-09-18-01-13-22.gh-issue-138890.x2QKfy.rst
@@ -1,1 +1,1 @@
-Deleting builtin names with ``del`` now gives a clearer error message.
+Deleting built-in names with :keyword:`del` now gives a clearer error message.
