--- a/Tools/scripts/README
+++ b/Tools/scripts/README
@@ -3,13 +3,22 @@ useful while building, extending or managing Python.
 
 checkpip.py               Checks the version of the projects bundled in ensurepip
                           are the latest available
+
 combinerefs.py            A helper for analyzing PYTHONDUMPREFS output
+
 divmod_threshold.py       Determine threshold for switching from longobject.c
                           divmod to _pylong.int_divmod()
+
 idle3                     Main program to start IDLE
+
+long_conv_tables.py       Compute tables for longobject.c long_from_non_binary_base()
+
 pydoc3                    Python documentation browser
-run_tests.py              Run the test suite with more sensible default options
+
+sortperf.py               List sort performance test, requires the pyperf module.
+
 summarize_stats.py        Summarize specialization stats for all files in the
                           default stats folders
+
 var_access_benchmark.py   Show relative speeds of local, nonlocal, global,
                           and built-in access
