--- a/Doc/whatsnew/3.14.rst
+++ b/Doc/whatsnew/3.14.rst
@@ -170,16 +170,17 @@ is worth considering:
 * they support a new (to Python), human-friendly concurrency model
 * true multi-core parallelism
 
-For some use cases, concurrency in software enables efficiency and
-can simplify software, at a high level.  At the same time, implementing
+For some use cases, concurrency in software improves efficiency and
+can simplify software at a high level.  At the same time, implementing
 and maintaining all but the simplest concurrency is often a struggle
 for the human brain.  That especially applies to plain threads
 (for example, :mod:`threading`), where all memory is shared between all threads.
 
 With multiple isolated interpreters, you can take advantage of a class
-of concurrency models, like CSP or the actor model, that have found
+of concurrency models, like Communicating Sequential Processes
+or the actor model, that have found
 success in other programming languages, like Smalltalk, Erlang,
-Haskell, and Go.  Think of multiple interpreters like threads
+Haskell, and Go.  Think of multiple interpreters as threads
 but with opt-in sharing.
 
 Regarding multi-core parallelism: as of the 3.12 release, interpreters
@@ -201,7 +202,7 @@ having the isolation of processes with the efficiency of threads.
 While the feature has been around for decades, multiple interpreters
 have not been used widely, due to low awareness and the lack of a stdlib
 module.  Consequently, they currently have several notable limitations,
-which will improve significantly now that the feature is finally
+which are expected to improve significantly now that the feature is
 going mainstream.
 
 Current limitations:
@@ -227,7 +228,7 @@ and provide utilities that are less appropriate on PyPI.  In the
 meantime, most of the limitations can also be addressed through
 extension modules, meaning PyPI packages can fill any gap for 3.14, and
 even back to 3.12 where interpreters were finally properly isolated and
-stopped sharing the :term:`GIL`.  Likewise, we expect to slowly see
+stopped sharing the :term:`GIL`.  Likewise, we expect to slowly see new
 libraries on PyPI for high-level abstractions on top of interpreters.
 
 Regarding extension modules, work is in progress to update some PyPI
