--- a/Misc/NEWS.d/next/C_API/2025-09-22-16-32-00.gh-issue-139165.6Czn7S.rst
+++ b/Misc/NEWS.d/next/C_API/2025-09-22-16-32-00.gh-issue-139165.6Czn7S.rst
@@ -1,2 +1,2 @@
 Expose the functions :c:func:`Py_SIZE`, :c:func:`Py_IS_TYPE` and
-:c:func:`SET_SIZE` in the Stable ABI.
+:c:func:`Py_SET_SIZE` in the Stable ABI.
