gh-67795: Improve precision of non-float timestamp and timeout arguments
Use the as_integer_ratio() or the numerator and denominator attributes
to represent the number as an integer ratio and perform scaling and
rounding exactly.

This allows to avoid the precision loss and double rounding error due to
conversion to float.

--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -281,7 +281,8 @@ Other language changes
 
 * Functions that take timestamp or timeout arguments now accept any real
   numbers (such as :class:`~decimal.Decimal` and :class:`~fractions.Fraction`),
-  not only integers or floats, although this does not improve precision.
+  not only integers or floats.
+  This allows to avoid the precision loss caused by the :class:`float` type.
   (Contributed by Serhiy Storchaka in :gh:`67795`.)
 
 
