--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -407,6 +407,17 @@ os.path
   (Contributed by Petr Viktorin for :cve:`2025-4517`.)
 
 
+pathlib
+-------
+
+* Add :class:`pathlib.Info` type, which queries and caches path metadata for
+  local filesystem paths. This type is used by the :attr:`pathlib.Path.info`
+  attribute, which consequently gains a :meth:`~pathlib.Info.stat` method;
+  this method returns an :class:`os.stat_result` object with low-level details
+  about the path.
+  (Contributed by Barney Gale in :gh:`139174`.)
+
+
 resource
 --------
 
