--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-09-23-21-01-12.gh-issue-139269.1rIaxy.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-09-23-21-01-12.gh-issue-139269.1rIaxy.rst
@@ -1,1 +1,1 @@
-Fix UB when using unaligned store in JIT's ``patch_*`` functions.
+Fix undefined behavior when using unaligned store in JIT's ``patch_*`` functions.
