--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -288,7 +288,7 @@ collections
 
 * Added :meth:`!collections.Counter.__xor__` and
   :meth:`!collections.Counter.__ixor__` to compute the symmetric difference
-  between Counter objects.
+  between :class:`~collections.Counter` objects.
   (Contributed by Raymond Hettinger in :gh:`138682`.)
 
 
