Fix Sphinx Lint error.

--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-09-25-23-26-15.gh-issue-138946.uN03eR.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-09-25-23-26-15.gh-issue-138946.uN03eR.rst
@@ -1,1 +1,1 @@
-Make binarysort adaptative. This improve `sorting()` performance by reducing the amount of comparisons of already sorted intervals.
+Make binarysort adaptative. This improve sorting() performance by reducing the amount of comparisons of already sorted intervals.
