--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -789,7 +789,7 @@ Limited C API changes
 ---------------------
 
 * If the :c:macro:`Py_TPFLAGS_MANAGED_DICT` and :c:macro:`Py_TPFLAGS_MANAGED_WEAKREF`
-  flags are set then :c:macro:`Py_TPFLAGS_HAVE_GC` should be set too.
+  flags are set then :c:macro:`Py_TPFLAGS_HAVE_GC` must be set too.
   (Contributed by Sergey Miryanov in :gh:`134786`)
 
 
