Drop troublesome HTML anchor from news item

--- a/Misc/NEWS.d/next/Documentation/2025-09-30-20-57-26.gh-issue-139313.ibcC9q.rst
+++ b/Misc/NEWS.d/next/Documentation/2025-09-30-20-57-26.gh-issue-139313.ibcC9q.rst
@@ -1,5 +1,5 @@
 Improve documentation on
-:doc:`XML security <../library/xml#xml-vulnerabilities>`
+:doc:`XML security <../library/xml>`
 and method
 :meth:`~xml.parsers.expat.xmlparser.ExternalEntityRefHandler`.
 Patch by Sebastian Pipping.
