Hugo's capitalisation suggestion

--- a/Doc/whatsnew/3.14.rst
+++ b/Doc/whatsnew/3.14.rst
@@ -2668,7 +2668,7 @@ urllib
 Deprecated
 ==========
 
-New Deprecations
+New deprecations
 ----------------
 
 * Passing a complex number as the *real* or *imag* argument in the
