gh-139847: Add PyType_Lookup() function

--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -852,6 +852,10 @@ New features
 
   (Contributed by Victor Stinner in :gh:`129813`.)
 
+* Add :c:func:`PyType_Lookup` function to look for a type attribute through the
+  type :term:`MRO <method resolution order>`.
+  (Contributed by Victor Stinner in :gh:`139847`.)
+
 
 Porting to Python 3.15
 ----------------------
@@ -868,6 +872,9 @@ Porting to Python 3.15
   (Contributed by Serhiy Storchaka in :gh:`133595`.)
 
 * Private functions promoted to public C APIs:
+
+  * :c:func:`!_PyType_Lookup`: use :c:func:`PyType_Lookup`.
+  * :c:func:`!_PyType_LookupRef`: use :c:func:`PyType_Lookup`.
 
   The |pythoncapi_compat_project| can be used to get most of these new
   functions on Python 3.14 and older.
@@ -914,6 +921,14 @@ Deprecated C APIs
 
 
 .. Add C API deprecations above alphabetically, not here at the end.
+
+.. include:: ../deprecations/c-api-pending-removal-in-3.16.rst
+
+.. include:: ../deprecations/c-api-pending-removal-in-3.18.rst
+
+.. include:: ../deprecations/c-api-pending-removal-in-3.19.rst
+
+.. include:: ../deprecations/c-api-pending-removal-in-future.rst
 
 Removed C APIs
 --------------
