--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -2554,6 +2554,8 @@ Deprecated C APIs
 
 .. include:: ../deprecations/c-api-pending-removal-in-3.18.rst
 
+.. include:: ../deprecations/c-api-pending-removal-in-3.19.rst
+
 .. include:: ../deprecations/c-api-pending-removal-in-future.rst
 
 .. _pythoncapi-compat project: https://github.com/python/pythoncapi-compat/
