--- a/Doc/whatsnew/3.14.rst
+++ b/Doc/whatsnew/3.14.rst
@@ -3079,6 +3079,8 @@ Deprecated C APIs
 
 .. include:: ../deprecations/c-api-pending-removal-in-3.18.rst
 
+.. include:: ../deprecations/c-api-pending-removal-in-3.19.rst
+
 .. include:: ../deprecations/c-api-pending-removal-in-future.rst
 
 
