Fix the function name in the NEWS entry

--- a/Misc/NEWS.d/next/C_API/2025-10-09-15-44-22.gh-issue-139847.-1_Pnx.rst
+++ b/Misc/NEWS.d/next/C_API/2025-10-09-15-44-22.gh-issue-139847.-1_Pnx.rst
@@ -1,3 +1,3 @@
 Deprecate the private functions :c:func:`!_PyType_Lookup` and
-:c:func:`!_PyType_LookupRef`: use the new public :c:func:`PyType_LookupRef`
+:c:func:`!_PyType_LookupRef`: use the new public :c:func:`PyType_Lookup`
 function instead. Patch by Victor Stinner.
